# TEXGEN

./: .gitignore  CMakeLists.txt  LICENSE  README.md  THIRD_PARTY.md  clean.bash  demo_steps.json  output.tga  project.json  project.txt  run.bash  run_tests.bash  voro.tga  work.pro
docs/: estudo_material_maker.md
examples/: 01_basic_shapes.json  02_star_polygon.json  03_text_on_noise.json  04_procedural_brick.json  05_crystal_glow.json  06_badge_composition.json  07_bezier_curves.json  08_dashed_arc.json  09_gradient_fill.json  10_fbm_warp_colorize.json  11_voronoi_blend_bricks.json  12_pbr_material.json  13_sdf_badge.json  14_subgraph_remote.json  README.md  demo_pipeline.json  demo_steps.json  mm_biohazard.json  mm_brick_rotated.json  mm_clump_of_grass.json  mm_crocodile_skin.json  mm_dry_earth.json  mm_emmental.json  mm_floor1.json  mm_floor2.json  mm_grass_with_flowers.json  mm_lava.json  mm_metal_pattern.json  mm_metal_pattern_2.json  mm_metal_pattern_3.json  mm_mosaic.json  mm_paper.json  mm_planet.json  mm_radiation.json  mm_rock.json  mm_rusted_metal.json  mm_tiles.json  mm_wood.json  mm_wood_with_blood.json  project.json  (+1 more)
lib/: AggCoreNodes.cpp  AggCoreNodes.h  CMakeLists.txt  CoreNode.h  CoreNodeRegistry.cpp  CoreNodeRegistry.h  CoreNodes.cpp  CoreNodes.h  GraphCoreNodes.cpp  GraphCoreNodes.h  GraphEval.cpp  GraphEval.h  HeadlessEval.cpp  HeadlessEval.h  MMCoreNodes.cpp  MMCoreNodes.h  PtexImport.cpp  PtexImport.h  mm_fill.cpp  mm_fill.h  mm_filters.cpp  mm_filters.h  mm_generators.cpp  mm_generators.h  mm_sdf.cpp  mm_sdf.h  mm_workflow.cpp  mm_workflow.h  test_texgen.cpp  texgen.h  texgen_utils.cpp  texgen_utils.h
patches/: imnodes-setcursorpos-fix.patch
presets/Bricks/: Red Wall.json
presets/Crystal/: Ice.json  Lava.json
presets/Noise/: Clouds.json  Gritty.json  Perlin Sutil.json
tests/: CMakeLists.txt  test_template.cpp.in  texgen_debug.cpp  texgen_export.cpp  texgen_render.cpp
tools/: ptex2texgen.py
work/: AggNodes.cpp  AggNodes.h  AllNodes.cpp  AllNodes.h  CExport.cpp  CExport.h  CMakeLists.txt  Const.h  Core.cpp  Core.h  FileDialog.h  Generator.h  Gradient.cpp  Gradient.h  GraphRunner.cpp  GraphRunner.h  Icons.cpp  Icons.h  Ide.cpp  Ide.h  Library.cpp  Library.h  MMNodes.cpp  MMNodes.h  Nodes.cpp  Nodes.h  Preview3D.cpp  Preview3D.h  ProjectIO.cpp  ProjectIO.h  StructNodes.cpp  StructNodes.h  Task.cpp  Task.h  TextureNode.h  UiWidgets.h  Utils.cpp  Utils.h  Voronoi.cpp  Voronoi.h  (+4 more)
work/ktg/: gentexture.cpp
